the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theproject
  template:
    metadata:
      labels:
        app: theproject
    spec:
      containers:
        - name: theproject
          image: the_project:local
