the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-project-svc
spec:
  type: ClusterIP
  selector:
    app: the-project
  ports:
    - protocol: TCP
      port: 1234 # cluster-internal port, it can be ~ anything (used for internal comm)
      targetPort: 3000 # This is the target port (inside the pod)

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-project-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: the-project-svc
                port:
                  number: 1234
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 1235
